Name:          johnwiegley
Version:       1.0.0
Synopsis:      What Thoughts May Come
Description:   What Thoughts May Come
Homepage:      http://johnwiegley.com/
License:       AllRightsReserved
License-file:  LICENSE
Author:        John Wiegley
Maintainer:    jwiegley@gmail.com
Copyright:     (C) 2016 John Wiegley
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.8

Extra-source-files: README.md

Executable johnwiegley
  Main-is:     Main.hs
  Ghc-options: -Wall

  Build-depends:
      base         >= 4.6    && < 5
    , attoparsec
    , binary       >= 0.5    && < 0.8
    , blaze-html
    , blaze-markup
    , directory    >= 1.2    && < 1.3
    , exceptions
    , filepath     >= 1.3    && < 2
    , foldl
    , hakyll
    , lens
    , old-locale
    , pandoc
    , pandoc-types
    , parsec
    , pipes
    , pipes-attoparsec
    , pipes-bytestring
    , pipes-group
    , pipes-safe
    , pipes-shell
    , pipes-text
    , process      >= 1.1    && < 1.3
    , split
    , strict
    , temporary
    , text
    , time
    , transformers
