Name:          sitebuilder
Version:       1.0.0
Synopsis:      A Hakyll site builder
Description:   A Hakyll site builder
Homepage:      http://github.com/jwiegley/sitebuilder
License:       AllRightsReserved
License-file:  LICENSE
Author:        John Wiegley
Maintainer:    jwiegley@gmail.com
Copyright:     (C) 2016 John Wiegley
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.8

Executable sitebuilder
  Main-is:     Main.hs
  Ghc-options: -Wall

  Build-depends:
      base         >= 4.6    && < 5
    , binary
    , directory    >= 1.2    && < 1.3
    , exceptions
    , filepath     >= 1.3    && < 2
    , foldl
    , hakyll
    , lens
    , old-locale
    , pandoc
    , pandoc-types
    , parsec
    , pipes
    , pipes-bytestring
    , pipes-group
    , pipes-safe
    , pipes-shell
    , pipes-text
    , process
    , split
    , strict
    , temporary
    , text
    , time
    , transformers
    , aeson
    , yaml
