Name:          sitebuilder
Version:       1.0.0
Synopsis:      A Hakyll site builder
Description:   A Hakyll site builder
Homepage:      http://github.com/jwiegley/sitebuilder
License:       AllRightsReserved
License-file:  LICENSE
Author:        John Wiegley
Maintainer:    jwiegley@gmail.com
Copyright:     (C) 2016,2017 John Wiegley
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.8

Executable sitebuilder
  Main-is:     Main.hs
  Ghc-options: -Wall

  Build-depends:
      base         >= 4.6    && < 5
    , aeson
    , binary
    , directory    >= 1.2    && < 1.4
    , exceptions
    , filepath     >= 1.3    && < 2
    , hakyll
    , old-locale
    , pandoc
    , pandoc-types
    , process
    , split
    , time
    , yaml
