Name:          sitebuilder
Version:       1.0.0
Synopsis:      A Hakyll site builder
Description:   A Hakyll site builder
Homepage:      http://github.com/jwiegley/sitebuilder
License:       AllRightsReserved
License-file:  LICENSE
Author:        John Wiegley
Maintainer:    jwiegley@gmail.com
Copyright:     (C) 2016,2017 John Wiegley
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.8

Executable sitebuilder
  Main-is:     Main.hs
  Ghc-options: -Wall

  Build-depends:
      base         >= 4.6
    , aeson
    , binary
    , directory    >= 1.2
    , exceptions
    , filepath     >= 1.3
    , hakyll       >= 4.15.1.1
    , old-locale
    , pandoc       >= 3.1.2
    , pandoc-types >= 1.23
    , process
    , split
    , text
    , time
    , regex-posix
    , syb
    , yaml
